scripts/testdata/chart-upgrade/values-0.1.0.yaml
ingressClass:
  name: upgrade
replicaCount: 2
controller:
  defaultSSLCertificate:
    secretName: upgrade-default-tls
    certManager:
      dnsNames:
        - tls.upgrade.test
haproxy:
  replicaCount: 2
  service:
    type: ClusterIP
